// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot before and after loading 1`] = `
<div>
  <div
    className="App"
  >
    <div
      className="App-header"
    >
      <img
        alt="logo"
        className="App-logo"
        src="logo.svg"
      />
      <h2>
        Welcome to the React MobX Book shop!
      </h2>
    </div>
    <ul
      className="App-menu"
    >
      <li>
        <a
          onClick={[Function]}
        >
          Available books
        </a>
      </li>
      <li>
        <a
          onClick={[Function]}
        >
          Your cart
        </a>
      </li>
    </ul>
    <h1>
      Loading...
    </h1>
  </div>
</div>
`;

exports[`matches snapshot before and after loading 2`] = `
<div>
  <div
    className="App"
  >
    <div
      className="App-header"
    >
      <img
        alt="logo"
        className="App-logo"
        src="logo.svg"
      />
      <h2>
        Welcome to the React MobX Book shop!
      </h2>
    </div>
    <ul
      className="App-menu"
    >
      <li>
        <a
          onClick={[Function]}
        >
          Available books
        </a>
      </li>
      <li>
        <a
          onClick={[Function]}
        >
          Your cart
        </a>
      </li>
    </ul>
    <section
      className="Page-books"
    >
      <h1>
        Available books
      </h1>
      <ol>
        <li>
          <a
            href="/book/978-1933988177"
            onClick={[Function]}
          >
            Lucene in Action, Second Edition
          </a>
        </li>
        <li>
          <a
            href="/book/978-1857995879"
            onClick={[Function]}
          >
            Sophie's World : The Greek Philosophers
          </a>
        </li>
        <li>
          <a
            href="/book/978-0641723445"
            onClick={[Function]}
          >
            The Lightning Thief
          </a>
        </li>
        <li>
          <a
            href="/book/978-1423103349"
            onClick={[Function]}
          >
            The Sea of Monsters
          </a>
        </li>
      </ol>
    </section>
  </div>
</div>
`;
